--- a/index.html
+++ b/index.html
@@ -2,25 +2,61 @@
 <html lang="pt-br">
 
 <head>
-    <link rel="stylesheet" href="./produtos/style.css">
-    <link rel="stylesheet" href="./reset.css">
+
+  <link rel="stylesheet" href="./reset.css">
+  <link rel="stylesheet" href="./css/style-home.css">
+  <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
 </head>
 
 <body>
 
-    <header id="cabecalho">
-        <div class="caixa">
-            <h1><img class="animate" src="./produtos/img/logo.png" alt="logo-barbearia"></h1>
-            <nav>
-                <ul>
-                    <li><a href="./index.html">Home</a></li>
-                    <li><a href="./produtos/produtos.html">Produtos</a></li>
-                    <li><a href="./contato/contato.html">Contato</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-    <h2 id="desenvolvimento" class="animate">EM DESENVOLVIMENTO</h2>
+  <header id="cabecalho">
+    <div class="caixa">
+      <h1><img class="animate" src="./produtos/img/logo.png" alt="logo-barbearia"></h1>
+      <nav>
+        <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./produtos/produtos.html">Produtos</a></li>
+          <li><a href="./contato/contato.html">Contato</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="./imagens/clientes..jpg" class="d-block w-100 g-col-6" alt="Clientes">
+      </div>
+      <div class="carousel-item">
+        <img src="./imagens/clientes.jpg" class="d-block w-100 g-col-6" alt="Clientes">
+      </div>
+      <div class="carousel-item">
+        <img src="./imagens/espaco.jpg" class="d-block w-100 g-col-6" alt="Nossa barbearia">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
+  <footer>
+    <img class="animate" src="../produtos/img/logo-branco.png" alt="logo-barbearia">
+    <a href="https://github.com/williamfilipi" class="copy">
+      <p>&copy;Barbearia William Filipi</p>
+    </a>
+  </footer>
+
+
+
+  <script src="./assets/js/bootstrap.bundle.min.js"></script>
+  <script src="./assets/js/bootstrap.min.js"></script>
+  <script src="./assets/js/popper.min.js"></script>
 
 </body>
 
