--- a/produtos/produtos.html
+++ b/produtos/produtos.html
@@ -27,23 +27,22 @@
         <ul class="produtos">
             <li>
                 <h2>Cabelo</h2>
-                <img src="img/cabelo.jpg" alt="">
+                <img src="img/cabelo.jpg" alt="Modelo de cabelo">
                 <p class="produto-descricao">Na tesoura ou máquina, como o cliente preferir</p>
                 <p class="produto-preco">R$ 25,00</p>
             </li>
             <li>
                 <h2>Barba</h2>
-                <img src="img/barba.jpg" alt="">
+                <img src="img/barba.jpg" alt="Modelo de Barba">
                 <p class="produto-descricao">Corte e desenho profissional de barba</p>
                 <p class="produto-preco">R$ 18,00</p>
             </li>
             <li>
                 <h2>Cabelo + Barba</h2>
-                <img src="img/cabelo+barba.jpg" alt="">
+                <img src="img/cabelo+barba.jpg" alt="Modelo de Cabelo Mais Barba">
                 <p class="produto-descricao">Pacote completo de cabelo e barba</p>
                 <p class="produto-preco">R$ 35,00</p>
             </li>
-
 
         </ul>
     </main>
