--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="./reset.css">
   <link rel="stylesheet" href="./css/style-home.css">
   <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+  <link rel="icon" href="./imagens/barbearia-moderna.png">
 </head>
 
 <body>
