--- a/index.html
+++ b/index.html
@@ -24,28 +24,31 @@
     </div>
   </header>
 
-  <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="./imagens/clientes..jpg" class="d-block w-100 g-col-6" alt="Clientes">
+  <div class="container carrosel">
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./imagens/clientes..jpg" class="d-block w-100 g-col-6" alt="Clientes">
+        </div>
+        <div class="carousel-item">
+          <img src="./imagens/clientes.jpg" class="d-block w-100 g-col-6" alt="Clientes">
+        </div>
+        <div class="carousel-item">
+          <img src="./imagens/espaco.jpg" class="d-block w-100 g-col-6" alt="Nossa barbearia">
+        </div>
       </div>
-      <div class="carousel-item">
-        <img src="./imagens/clientes.jpg" class="d-block w-100 g-col-6" alt="Clientes">
-      </div>
-      <div class="carousel-item">
-        <img src="./imagens/espaco.jpg" class="d-block w-100 g-col-6" alt="Nossa barbearia">
-      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
   </div>
-
   <footer>
     <img class="animate" src="../produtos/img/logo-branco.png" alt="logo-barbearia">
     <a href="https://github.com/williamfilipi" class="copy">
